# lateral-thinking

./: .gitignore  README.md  embeddings.py  evaluate.py  generate_linear_equation_data.py  grpo.py  models.py  omega_test.py  pyproject.toml  requirements.txt  reward.py  setup.sh  utils.py
configs/: qwen3_gsm8k.yaml
data/: linear_systems_1000_samples_2eq_2vars.npz  test_gsm8k.py
linear_systems/: dataset.py  evaluation.py  generate_data.py  main.py  models.py  prompts.py  utils.py
linear_systems/data/: linear_systems_1000_samples_2eq_2vars.npz  linear_systems_100_samples_2eq_2vars.npz  linear_systems_10_samples_2eq_2vars.npz
