[project]
name = "lateral-thinking"
authors = [
    {name = "Bhavesh Kalisetti", email = "bhaveshkalisetti@gmail.com"},
]
version = "0.0.0"
description = "Lateral Thinking for LLMs"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11,<3.13"
keywords = ["reinforcement-learning", "llm", "rl", "grpo", "lateral thinking", "creativity"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "datasets>=3.6.0",
    "transformers>=4.52.4",
    "verifiers>=0.1.1",
]
